RESOURCES/style.css
/* ... */
@media (max-width:767px){.navbar{margin-bottom:40px;}
.navbar span.tagline{clear:both;margin:0;}
.navbar .container a.navbar-brand{height:50px;}
.navbar .navbar-header i{font-size:26px;width:30px;}
.navbar .navbar-nav{padding:0;}
.navbar .navbar-nav li a{padding:0 15px;}
}
.section{}
body .section.clear{background-color:transparent;}
.section.footer-padding{padding-bottom:80px;}
.section.bottom{margin-bottom:175px;}
.section p{line-height:25px;}
.section p.description{text-align:center;color:#888;font-size:18px;line-height:36px;}
.section .container{position:relative;padding:100px 0;width:80%;background-color:#fcfcfc;top:-2px;}
.section .container.gs{position:relative;padding:50px 0;width:80%;background-color:#fcfcfc;top:-72px;}
.section .container.gert{position:relative;padding:40px 0;width:80%;background-color:#fcfcfc;top:-90px;}
.section .container.news{position:relative;padding:30px 0 20px;width:80%;background-color:#fcfcfc;top:30px;border-radius:2%;}
.section .container.newd{position:relative;padding:100px 0 200px;width:80%;background-color:#fcfcfc;top:100px;}
.section .container.outr{position:relative;padding:50px 0;width:80%;background-color:#fcfcfc;top:-2px;}
.section .container.first{padding-top:25px;}
.section .container.map{padding-top:0;}
.section .container.single{padding:50px 0;}
.section .container.last{padding-bottom:0;}
.section .container.no-bg{padding:0;background-color:transparent;}
.section .container.gray{background-color:#ddd;}
.section .container.clear{padding:80px 0 0 0;background-color:transparent;}
.section .container.subscribe{padding:50px 0px;margin-top:30px;}
.section .container.subscribe h2{margin:0;line-height:80px;color:#fff;}
.section .container .content{padding:0 30px;}
.section .browser-preview{padding:0 20px;position:relative;width:100%}
.section .browser-preview img.browser{width:120%;}
.section .browser-preview img.preview{width:120%;-webkit-border-radius:0 0 0 5px;-moz-border-radius:0 0 0 5px;border-radius:0 0 0 5px;}
.section .browser-preview.right img.browser, .section .browser-preview.right img.preview{float:right;clear:both;}
.section h1, .section h2, .section h3, .section h4, .section h5, .section h6, .section .h1, .section .h2, .section .h3, .section .h4, .section .h5, .section .h6{color:#444;}
.section h2.title{font-family:'Montserrat', Arial, Helvetica, sans-serif;padding-bottom:5px;display:inline-block;}
.section h2.title.single{margin:0;}
.section h2 span{color:#0a6117;margin-right:20px;}
@media (max-width:992px){.section .fixed-wrapper h1.affix{top:0;left:0;}
.section h2{margin:30px 0 20px 0;}
}
@media (max-width:420px){img.background{height:100%;}
.section h1{font-size:30px;margin:18px 0 35px 0;}
span.logo.glyphicon{margin-top:20px;}
}
@media (max-width:767px){.section .container, .container{width:95%;}
.section .container{padding:50px 0;}
.section .container.news{padding:15px 0 10px;top:-1px;width:95%;}
.section .container.gs{width:95%;}
.section .container.gert{width:95%;}
.section .container.outr{width:95%;}
.section .container.newd{padding:50px 0 100px;top:50px;width:95%;}
.section h2{margin-bottom:35px;text-align:center;}
.section .content{text-align:center;}
.section .browser-preview{padding:0;width:100%;}
.section .browser-preview img.preview{-webkit-border-radius:0 0 5px 5px;-moz-border-radius:0 0 5px 5px;border-radius:0 0 5px 5px;}
.section .container.subscribe{padding:20px 0;}
.section .container.subscribe h2{font-size:20px;}
.section .container.subscribe .btn{font-size:14px;margin-bottom:20px;}
.section .container.subscribe .row [class*="col-"]{margin:0;}
img.background{background-attachment:scroll;position:absolute;}
}
#home{text-align:center;padding:0;z-index:2;}
#home .row{margin:0;}
#home .wrapper .container{position:relative;padding:0;background-color:#ccc;}
#home h1{display:block;margin:100px 0 50px 0;color:#fcfcfc;font-size:50px;line-height:50px;}
#home .bottom{text-align:center;position:absolute;left:0;right:0;bottom:40px;margin:0;}
.carousel .carousel-inner .item{opacity:0;-webkit-transition:opacity 1s;-moz-transition:opacity 1s;-o-transition:opacity 1s;transition:opacity 1s;}
.carousel .carousel-inner .active{opacity:1;}
.carousel .carousel-inner .active.left, .carousel .carousel-inner .active.right{left:0;opacity:0;}
.carousel .carousel-inner .next.left, .carousel .carousel-inner .prev.right{opacity:1;}
@media (max-width:992px){.carousel{margin-bottom:30px;}
#home h1{font-size:30px;margin:20% 0 10% 0;}
#home .bottom{bottom:20px;}
}
@media (max-width:420px){#home .bottom{display:none;}
#home h1{line-height:50px;}
#home .container{padding-top:50px;}
}
#services{color:#444;min-height:0;position:relative;overflow:hidden;}
.service{text-align:center;padding:0 30px;}
.service .icon-wrapper .circle{background-color:#ccc;}
.service:hover .icon-wrapper .circle{background-color:#ddd;}
.service:hover .icon-wrapper i{color:#444;}
.service h3{padding:25px 0;margin:0;text-align:center;}
.service p{text-align:left;padding:0 0 20px 0;margin:0;}
#services h3{font-size:20px;}
#services .service-icon{text-align:center;color:#fff;}
#services .service-icon i:hover{color:#fff;}
#services .service-icon i{margin:0 auto;color:rgba(255, 255, 255, .7);display:inline-block;font-size:40px;display:block;height:100px;width:100px;padding-top:25px;border:4px solid rgba(237, 200, 14, .7);-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;-webkit-transition:background-color .3s;transition:background-color .3s;}
#services .service-icon span{display:block;margin-top:20px;}
@media (min-width:420px) and (max-width:768px){.service p{text-align:center;}
}
@media (max-width:768px){#services .row [class*="col-"]{margin-bottom:30px;text-align:left;}
}
#features{}
#features h2{margin-bottom:55px;}
#features p{font-size:14px;color:#888;}
#features img.slide-in{position:relative;}
#features img.slide-in.right{float:right;}
#features .row{margin:0;}
#features .row [class*="col-"]{margin-bottom:0;}
#features .row.left{}
/* ... */

